src/objects/Ordine_Sartoria_Solomeo__c.object
<CustomObject>
    <fields>
        <fullName>Area_MTM__c</fullName>
        <formula>text(Associate__r.Location__r.Area_MTM__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Area MTM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Associate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Associate</label>
        <referenceTo>Associated__c</referenceTo>
        <relationshipLabel>Ordini Sartoria Solomeo</relationshipLabel>
        <relationshipName>Ordini_Sartoria_Solomeo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bottone__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bottone</label>
        <referenceTo>Bottone__c</referenceTo>
        <relationshipLabel>Ordini Sartoria Solomeo</relationshipLabel>
        <relationshipName>Ordini_Sartoria_Solomeo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Capo_Tessuto__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Capo - Tessuto</label>
        <referenceTo>Capo_Tessuto__c</referenceTo>
        <relationshipLabel>Ordini Sartoria Solomeo</relationshipLabel>
        <relationshipName>Ordini_Sartoria_Solomeo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Capo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Capo</label>
        <referenceTo>Capo__c</referenceTo>
        <relationshipLabel>Ordini Sartoria Solomeo</relationshipLabel>
        <relationshipName>Ordini_Sartoria_Solomeo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cliente__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cliente</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Ordini Sartoria Solomeo</relationshipLabel>
        <relationshipName>Ordini_Sartoria_Solomeo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Codice_Capo__c</fullName>
        <formula>Capo__r.Codice_Capo__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Codice Capo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Codice_finale_prodotto__c</fullName>
        <formula>Tessuto_Colore__r.Stagione__r.Codice_Stagione__c &amp;&quot;-&quot;&amp;
 Tessuto__r.Codice__c &amp;&quot;-&quot;&amp;
CASE ( Capo__r.Record_Type_Label__c, 
&quot;Abito&quot;, Capo__r.Codice_Abito__c, 
&quot;Giacca&quot;, Capo__r.Codice_Giacca__c, 
&quot;Pantalone&quot;, Capo__r.Codice_Pantalone__c, 
&quot;Panciotto&quot;, Capo__r.Codice_Panciotto__c,&quot;&quot;) &amp;&quot;-&quot;&amp;
 Tessuto_Colore__r.Codice_Colore__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Codice Stagione - Codice Tessuto - Codice Capo - Codice Colore</inlineHelpText>
        <label>Codice finale prodotto</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cognome_Associate__c</fullName>
        <formula>Associate__r.Cognome__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cognome Associate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cognome_Cliente__c</fullName>
        <formula>Cliente__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cognome Cliente</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Completato__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Completato</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Conteggia__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Conteggia</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Data_approvazione_ordine_1_livello__c</fullName>
        <label>Data approvazione ordine 1 livello</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Data_approvazione_ordine_2_livello__c</fullName>
        <label>Data approvazione ordine 2 livello</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Data_consegna_a_cliente__c</fullName>
        <label>Data consegna a cliente</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Data_consegna_in_negozio__c</fullName>
        <label>Data consegna in negozio</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Data_etichetta__c</fullName>
        <label>Data etichetta</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Descrizione_Colore__c</fullName>
        <formula>text(Tessuto_Colore__r.Descrizione_Colore__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Descrizione Colore</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Descrizione_Tessuto__c</fullName>
        <formula>Tessuto__r.Descrizione_Tessuto__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Descrizione Tessuto</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Boutique__c</fullName>
        <label>Email Boutique</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_Buying__c</fullName>
        <label>Email Buying</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_Commerciale__c</fullName>
        <label>Email Commerciale</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Etichetta_personalizzata__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Etichetta personalizzata</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fascia_Smoking__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fascia Smoking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fodera__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fodera</label>
        <referenceTo>Fodera__c</referenceTo>
        <relationshipLabel>Ordini Sartoria Solomeo</relationshipLabel>
        <relationshipName>Ordini_Sartoria_Solomeo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Misure_Giacca__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Misure Giacca</label>
        <referenceTo>Account_Misure_Sartoriali__c</referenceTo>
        <relationshipLabel>Ordini Sartoria Solomeo</relationshipLabel>
        <relationshipName>Ordini_Sartoria_Solomeo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Misure_Pantaloni__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Misure Pantaloni</label>
        <referenceTo>Account_Misure_Sartoriali__c</referenceTo>
        <relationshipLabel>Ordini Sartoria Solomeo (Misure Pantaloni)</relationshipLabel>
        <relationshipName>Ordini_Sartoria_Solomeo1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Name_etichetta__c</fullName>
        <label>Name etichetta</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nome_Associate__c</fullName>
        <formula>Associate__r.Nome__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nome Associate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nome_Cliente__c</fullName>
        <formula>Cliente__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nome Cliente</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nota_approvatore_1_livello__c</fullName>
        <label>Nota approvatore 1 livello</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Nota_di_consegna_al_cliente__c</fullName>
        <label>Nota di consegna al cliente</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Nota_negozio__c</fullName>
        <label>Nota negozio</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Nota_sarto__c</fullName>
        <label>Nota sarto</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Papillon__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Papillon</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prezzo_number__c</fullName>
        <formula>IF ( CreatedBy.Country = &quot;IT&quot;, Capo_Tessuto__r.Prezzo_ITA__c,

CASE( CreatedBy.CurrencyISOcode__c , 
&quot;EUR&quot;, Capo_Tessuto__r.Prezzo_EUR__c , 
&quot;USD&quot;, Capo_Tessuto__r.Prezzo_USD__c, 
&quot;CHF&quot;, Capo_Tessuto__r.Prezzo_CHF__c, 
&quot;CNY&quot;, Capo_Tessuto__r.Prezzo_CNY__c, 
&quot;GBP&quot;, Capo_Tessuto__r.Prezzo_GBP__c, 
&quot;JPY&quot;, Capo_Tessuto__r.Prezzo_JPY__c, 
&quot;RUB&quot;, Capo_Tessuto__r.Prezzo_RUB__c, 
&quot;CAD&quot;, Capo_Tessuto__r.Prezzo_CAD__c, 
&quot;HKD&quot;, Capo_Tessuto__r.Prezzo_HKD__c, 
&quot;MOP&quot;, Capo_Tessuto__r.Prezzo_MOP__c, 
Capo_Tessuto__r.Prezzo_EUR__c)

* Quantit__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prezzo (number)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prezzo_valuta__c</fullName>
        <formula>CASE(CreatedBy.CurrencyISOcode__c, 
&quot;EUR&quot;, &quot;EUR&quot;, 
&quot;USD&quot;, &quot;USD&quot;, 
&quot;CHF&quot;, &quot;CHF&quot;, 
&quot;CNY&quot;, &quot;CNY&quot;, 
&quot;GBP&quot;, &quot;GBP&quot;, 
&quot;JPY&quot;, &quot;JPY&quot;, 
&quot;RUB&quot;, &quot;RUB&quot;, 
&quot;CAD&quot;, &quot;CAD&quot;, 
&quot;HKD&quot;, &quot;HKD&quot;, 
&quot;MOP&quot;, &quot;MOP&quot;, 
&quot;EUR&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prezzo (valuta)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantit__c</fullName>
        <label>Quantità</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Record_Type_Giacca__c</fullName>
        <label>Record Type Giacca</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In editing</fullName>
                </value>
                <value>
                    <fullName>In revisione 1 livello</fullName>
                </value>
                <value>
                    <fullName>Rifiutato 1 livello</fullName>
                </value>
                <value>
                    <fullName>In revisione dal sarto</fullName>
                </value>
                <value>
                    <fullName>Rifiutato dal sarto</fullName>
                </value>
                <value>
                    <fullName>Approvato dal sarto</fullName>
                </value>
                <value>
                    <fullName>Ricevuto in negozio</fullName>
                </value>
                <value>
                    <fullName>Consegnato al Cliente</fullName>
                </value>
                <value>
                    <fullName>Annullato</fullName>
                </value>
                <value>
                    <fullName>Approvato 1 livello</fullName>
                    <isActive>false</isActive>
                    <label>Approvato 1 livello</label>
                </value>
                <value>
                    <fullName>Approvato con modifiche 1 livello</fullName>
                    <isActive>false</isActive>
                    <label>Approvato con modifiche 1 livello</label>
                </value>
                <value>
                    <fullName>Approvato con modifiche dal sarto</fullName>
                    <isActive>false</isActive>
                    <label>Approvato con modifiche dal sarto</label>
                </value>
                <value>
                    <fullName>In modifica</fullName>
                    <isActive>false</isActive>
                    <label>In modifica</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tessuto_Colore__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tessuto Colore</label>
        <referenceTo>Tessuto_Colore__c</referenceTo>
        <relationshipLabel>Ordini Sartoria Solomeo</relationshipLabel>
        <relationshipName>Ordini_Sartoria_Solomeo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tessuto__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tessuto</label>
        <referenceTo>Tessuto__c</referenceTo>
        <relationshipLabel>Ordini Sartoria Solomeo</relationshipLabel>
        <relationshipName>Ordini_Sartoria_Solomeo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tessuto_utilizzato_metri__c</fullName>
        <label>Tessuto utilizzato (metri)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Ordine Sartoria Solomeo</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Capo__c</columns>
        <columns>Cliente__c</columns>
        <columns>Associate__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>O-{000000}</displayFormat>
        <label>Nome Ordine Sartoria Solomeo</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ordini Sartoria Solomeo</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>